2010-02-26  Diego Gonzalez  <diego.gonzalez@openbossa.org>

Reviewed by Simon Hausmann.

        Fix documentation of QWebSettings::setUserStyleSheetUrl method

        The base 64 data in the exemple shows a not valid code.

        REGRESSION: QWebSettings::setUserStyleSheetUrl is not working with a data URL (Base64)
        https://bugs.webkit.org/show_bug.cgi?id=34802

        * Api/qwebsettings.cpp:

Canonical link: https://commits.webkit.org/46589@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55288 268f45cc-cd09-0410-ab3c-d52691b4dbfc